--- a/README
+++ b/README
@@ -1,16 +1,13 @@
-An Chatroom application, may it be Central Perk, implemented in Java.
+Chatroom application: Central-Perk Chatroom
+Implementation: Maven, JavaFX (& Scene Builder), MySQL
+The most important part: Socket, Serializable, ObjectInputStream & ObjectOutputStream, Thread
 Author: QIU Runheng 122090437
 
-Report and details:
+Modules:
 1.ClientSide
 2.ServerSide
-3.Database
+
+How to Use:
 
 
-
-Notations for ME:
-1. JavaFx CAN NOT RUN ITS main function, so we'd better create a
-    new main function class to call the main function in i.e.Stage.java
-    然后在main 里面通过创建对象或者function call来实现别的class里面的代码
-2. Create a sql file to store the datum
-3.对于忘记密码的怎么处理：直接联系管理员？直接重新创建？
+Remark:
