--- a/README
+++ b/README
@@ -4,7 +4,7 @@ Created by: QIU Runheng 🤝 122090437
 
 💻 Implementation Details
 
-Built with:
+## Built with:
 
 Maven 📦 for project management and dependency handling
 JavaFX 💻 (& Scene Builder) for intuitive and responsive GUI design
